# magnesia

./: .bazelrc  .gitignore  BUILD.bazel  Cargo.toml  LICENSE.md  README.md  WORKSPACE.bazel  cargo-bazel-lock.json
.github/workflows/: bazel_build_and_test.yml  cargo_build_and_test.yml
src/: lib.rs
src/algebra/: complex.rs  conj.rs  field.rs  mod.rs  ops_with_ref.rs  polynomial.rs  ring.rs
src/functions/: abs.rs  asin.rs  atan2.rs  cos.rs  cosh.rs  exp.rs  log.rs  mod.rs  sin.rs  sinh.rs  sqrt.rs  tan.rs
src/linalg/: dmatrix.rs  dvector.rs  matrix.rs  mod.rs  svector.rs  vector.rs
src/optimize/: differential_evolution.rs  mod.rs  test_functions.rs
