load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test", "rust_doc")

package(default_visibility = ["//visibility:public"])

rust_library(
    name = "magnesia",
    srcs = glob(["src/**/*.rs"]),
)

rust_test(
    name = "magnesia_test",
    size = "small",
    crate = ":magnesia",
)

rust_doc(
    name = "magnesia_doc",
    crate = ":magnesia",
)
