load("@rules_rust//rust:defs.bzl", "rust_doc", "rust_doc_test", "rust_library", "rust_test")

package(default_visibility = ["//visibility:public"])

rust_library(
    name = "magnesia",
    srcs = glob(["src/**/*.rs"]),
)

rust_test(
    name = "magnesia_test",
    size = "small",
    crate = ":magnesia",
)

rust_doc(
    name = "magnesia_doc",
    crate = ":magnesia",
)

rust_doc_test(
    name = "magnesia_doc_test",
    size = "small",
    crate = ":magnesia",
)
