[package]
name = "magnesia"
version = "0.1.2"
edition = "2021"
license = "MIT"
keywords = ["maths"]
categories = ["algorithms", "mathematics", "science"]
description = "A math library for Rust"
homepage = "https://docs.rs/magnesia/0.1.2/magnesia/"
documentation = "https://docs.rs/magnesia/0.1.2/magnesia/"
repository = "https://github.com/ralphtandetzky/magnesia"
readme = "README.md"
authors = ["Ralph Tandetzky"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
