[package]
name = "magnesia"
version = "0.10.0"
edition = "2021"
license = "MIT"
keywords = ["maths"]
categories = ["algorithms", "mathematics", "science"]
description = "A math library for Rust"
homepage = "https://docs.rs/magnesia/latest/magnesia/"
documentation = "https://docs.rs/magnesia/latest/magnesia/"
repository = "https://github.com/ralphtandetzky/magnesia"
readme = "README.md"
authors = ["Ralph Tandetzky"]

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "katex.html"]

[dependencies]

[dev-dependencies]
rand = "0.8.5"
